# KPIT_Project

./: C++_Car_Functionality_System_-_Project_Report.docx
project_file/: CMakeLists.txt  Car.cpp  Car.h  CarTest  TestCar.cpp
